--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -2,6 +2,7 @@
 $main-color: #ffd200
 $text-color: #333333
 $block-color: #f5f5f5
+$materials-color: #f7f7f7
 $border-input: #dddddd
 $border-card: #e8e8e8
 $warranty-block: #ffc000
