--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,6 +15,8 @@
 @import 'blocks/steps'
 /* Импорт стилей блока с гарантией */
 @import 'blocks/warranty'
+/* Импорт стилей блока с материалами */
+@import 'blocks/materials'
 /* Импорт стилей блока с брифом и формой */
 @import 'blocks/brif'
 /* Импорт стилей подвала */
