--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,8 @@ h1, h2, h3, h4, p, ul, li, hr {
 .container {
   width: 1170px;
   margin: auto;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 @media (max-width: 1200px) {
@@ -379,7 +381,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 .offer-block {
   position: relative;
   width: 50%;
-  padding-right: 77px;
+  padding-right: 92px;
 }
 
 .offer__title {
@@ -882,10 +884,12 @@ h1, h2, h3, h4, p, ul, li, hr {
 /* Импорт стилей блока с материалами */
 .materials {
   padding-top: 100px;
-  padding-bottom: 84px;
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-bottom: 72px;
+}
+
+.materials-container {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .materials-wrap {
@@ -898,34 +902,79 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 .materials-block {
-  width: 370px;
-  background: #f7f7f7;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.materials-block:last-child {
-  margin-right: 0px;
-}
-
-.materials-block:first-child {
-  margin-left: 0px;
+  max-width: 370px;
+  background-color: #f7f7f7;
 }
 
 .materials__text {
-  padding-top: 30px;
-  padding-right: 54px;
+  padding-top: 20px;
   padding-left: 25px;
+  padding-bottom: 50px;
   font-size: 16px;
+  font-weight: 300;
   line-height: 23px;
 }
 
-.materials__text_bold {
-  font-weight: 600;
+.materials__text-first {
+  padding-right: 80px;
 }
 
-.materials__text:first-child {
-  padding-bottom: 10px;
+.materials__text-second {
+  padding-right: 46px;
+}
+
+.materials__text-third {
+  padding-right: 59 materials__text-firstpx;
+}
+
+.materials__text_bold {
+  font-weight: 700;
+}
+
+.materials__img {
+  max-width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .materials-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .materials-block {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .materials {
+    padding-top: 59px;
+  }
+  .materials-block {
+    width: 270px;
+    margin-bottom: 33px;
+  }
+  .materials__text {
+    font-size: 12px;
+    padding-top: 13px;
+    padding-left: 17px;
+    padding-bottom: 42px;
+    line-height: 18px;
+  }
+  .materials__text-first {
+    padding-right: 39px;
+  }
+  .materials__text-second {
+    padding-right: 22px;
+    padding-bottom: 43px;
+  }
+}
+
+@media (max-width: 567px) {
+  .materials__text {
+    padding-bottom: 35px;
+  }
 }
 
 /* Импорт стилей блока с брифом и формой */
