--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -14,6 +14,8 @@ h1, h2, h3, h4, p, ul, li, hr
 .container
     width: 1170px
     margin: auto
+    padding-right: 0
+    padding-left: 0
 @media (max-width: 1200px)
     .container
         width: 760px
