--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -21,5 +21,7 @@
 @import 'blocks/brif'
 /* Импорт стилей подвала */
 @import 'blocks/footer'
+/* Импорт стилей окна с благодарностью */
+@import 'blocks/thx'
 /* Импорт стилей модального окна */
 @import 'blocks/modal'
