--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1332,6 +1332,33 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 /* Импорт стилей модального окна */
+.modal-thank {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: none;
+}
+
+.modal-thank_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-thank__dialog {
+  position: relative;
+  margin: auto;
+  width: 570px;
+  background-color: #fff;
+  padding: 80px 100px 76px;
+}
+
 .modal {
   position: fixed;
   left: 0;
