--- a/src/sass/blocks/_thx.sass
+++ b/src/sass/blocks/_thx.sass
@@ -1,26 +1,17 @@
-
-  .thx-window
-    position: fixed
-    left: 0
-    top: 0
-    width: 100%
-    height: 100%
-    background-color: rgba(#000, 0.5)
-    display: none
-    z-index: 7
-    &_active
-      display: flex
-    &-container
-      display: flex
-      position: relative
-      margin: auto
-      width: 570px
-      height: 670px
-      background-color: #fff
-    &__close
-      position: absolute
-      top: 5px
-      right: 3px
-      background: transparent
-      border: none
-      z-index: 10
+.modal-thank
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(#000, 0.5)
+  display: flex
+  display: none
+  &_active
+    display: flex
+  &__dialog
+    position: relative
+    margin: auto
+    width: 570px
+    background-color: #fff
+    padding: 80px 100px 76px
