pixel-perfect (part1)

--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -1,6 +1,6 @@
 .hero
     background-color: $block-color
-    padding: 50px 0
+    padding: 50px 0 48px
     &-block
         display: flex
     &-text
@@ -11,22 +11,25 @@
             font-size: 41px
             font-weight: 600
             line-height: 55px
-            margin-bottom: 37px
+            margin-bottom: 35px
             margin-left: -2px
         &__subtitle
             font-size: 20px
             font-weight: 600
             display: inline-block
             margin-bottom: 70px
+            margin-left: 1px
     &-list
         margin: 0
         padding: 0
         &__item
             display: flex
             align-items: center
-            margin-bottom: 25px
+            margin-bottom: 21px
             &:last-child
                 margin-bottom: 0
+            &:first-child
+                margin-bottom: 26px
         &__image
             width: 40px
             height: 40px
