--- a/src/css/style.css
+++ b/src/css/style.css
@@ -177,7 +177,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 .navbar__button {
   margin-top: -3px;
-  margin-left: 30px;
+  margin-left: 27px;
   font-weight: 700;
 }
 
@@ -224,7 +224,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 /* Импорт стилей главного экрана */
 .hero {
   background-color: #f5f5f5;
-  padding: 50px 0;
+  padding: 50px 0 48px;
 }
 
 .hero-block {
@@ -244,7 +244,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   font-size: 41px;
   font-weight: 600;
   line-height: 55px;
-  margin-bottom: 37px;
+  margin-bottom: 35px;
   margin-left: -2px;
 }
 
@@ -253,6 +253,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   font-weight: 600;
   display: inline-block;
   margin-bottom: 70px;
+  margin-left: 1px;
 }
 
 .hero-list {
@@ -267,11 +268,15 @@ h1, h2, h3, h4, p, ul, li, hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 21px;
 }
 
 .hero-list__item:last-child {
   margin-bottom: 0;
+}
+
+.hero-list__item:first-child {
+  margin-bottom: 26px;
 }
 
 .hero-list__image {
@@ -381,7 +386,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 .offer-block {
   position: relative;
   width: 50%;
-  padding-right: 92px;
+  padding-right: 90px;
 }
 
 .offer__title {
@@ -397,7 +402,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   font-weight: 300;
   font-size: 16px;
   max-width: 270px;
-  margin-bottom: 34px;
+  margin-bottom: 31px;
 }
 
 .offer__input {
@@ -406,7 +411,12 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 .offer__input:first-child {
-  margin-right: 9px;
+  margin-right: 11px;
+  padding: 23px 25px;
+}
+
+.offer__input:nth-child(2) {
+  padding: 23px 31px;
 }
 
 .offer__ref {
@@ -427,13 +437,17 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 .offer__text:last-child {
-  margin-right: -27px;
+  margin-right: -26px;
+  margin-top: -2px;
 }
 
 .offer__phone {
   font-weight: 600;
   text-decoration: none;
   color: #000;
+  display: block;
+  margin-top: 2px;
+  margin-left: -2px;
 }
 
 .offer__button {
@@ -979,8 +993,8 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 /* Импорт стилей блока с брифом и формой */
 .brif {
-  padding-top: 98px;
-  padding-bottom: 97px;
+  padding-top: 100px;
+  padding-bottom: 96px;
   background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
   background-position: left center, right center;
   background-size: 50%, contain;
@@ -1056,9 +1070,10 @@ h1, h2, h3, h4, p, ul, li, hr {
   width: 35px;
   height: 35px;
   border: 2px solid #000;
-  margin-right: 32px;
-  font-size: 14px;
+  margin-right: 31px;
+  font-size: 12px;
   border-radius: 50%;
+  margin-left: 3px;
 }
 
 .interview-list__item {
@@ -1072,9 +1087,36 @@ h1, h2, h3, h4, p, ul, li, hr {
   margin-bottom: 25px;
 }
 
+.interview-list__item:first-child {
+  margin-bottom: 25px;
+}
+
+.interview-list__item:nth-child(2) {
+  margin-bottom: 27px;
+}
+
+.interview-list__item:nth-child(3) {
+  margin-bottom: 1px;
+}
+
 .interview-list__text {
   max-width: 390px;
   font-size: 18px;
+}
+
+.interview-list__text-second {
+  display: inline-block;
+  margin-top: 1px;
+}
+
+.interview-list__text-third {
+  display: inline-block;
+  margin-top: 1px;
+}
+
+.interview-list__text-forth {
+  display: inline-block;
+  margin-top: 1px;
 }
 
 .form-wrap {
