--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -1,6 +1,6 @@
 .brif
-    padding-top: 98px
-    padding-bottom: 97px
+    padding-top: 100px
+    padding-bottom: 96px
     background-image: url('../img/brif/brif-color-bg.png'), url('../img/brif/brif-bg.jpg')
     background-position: left center, right center
     background-size: 50%, contain
@@ -48,14 +48,21 @@
             width: 35px
             height: 35px
             border: 2px solid #000
-            margin-right: 32px
-            font-size: 14px
+            margin-right: 31px
+            font-size: 12px
             border-radius: 50%
+            margin-left: 3px
         &__item
             display: flex
             align-items: center
             font-weight: 600
             margin-bottom: 25px
+            &:first-child
+                margin-bottom: 25px
+            &:nth-child(2)
+                margin-bottom: 27px
+            &:nth-child(3)
+                margin-bottom: 1px
         &__text
             max-width: 390px
             font-size: 18px
