--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -13,7 +13,7 @@
     &-block
         position: relative
         width: 50%
-        padding-right: 92px
+        padding-right: 90px
     &__title
         font-size: 24px
         font-weight: 600
@@ -25,12 +25,15 @@
         font-weight: 300
         font-size: 16px
         max-width: 270px
-        margin-bottom: 34px
+        margin-bottom: 31px
     &__input
         width: 240px
         margin-bottom: 30px
         &:first-child
-            margin-right: 9px
+            margin-right: 11px
+            padding: 23px 25px
+        &:nth-child(2)
+            padding: 23px 31px
     &__ref
         display: flex
         justify-content: space-between
@@ -41,11 +44,15 @@
         line-height: 24px
         width: 225px
         &:last-child
-            margin-right: -27px
+            margin-right: -26px
+            margin-top: -2px
     &__phone
         font-weight: 600
         text-decoration: none
         color: #000
+        display: block
+        margin-top: 2px
+        margin-left: -2px
     &__button
         width: 100%
         min-height: 70px
