Сделан Pixel Perfect для Desctop

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -8,8 +8,8 @@
     height: 640px
 .contacts
     flex-basis: 50%
-    padding-top: 100px
-    padding-left: 210px
+    padding-top: 93px
+    padding-left: 215px
     padding-bottom: 128px
     &-block
         display: flex
@@ -21,6 +21,7 @@
         margin-bottom: 100px
     &-list
         list-style: none
+        margin-left: -4px
         &__icon
             width: 20px
             height: 20px
@@ -31,14 +32,17 @@
             display: flex
             align-items: flex-start
             margin-bottom: 39px
-            line-height: 22px
+            line-height: 23px
             &:last-child
                 margin-bottom: 0
         &__text
+            margin-top: -2px
             &-add
                 font-weight: 600
                 display: block
                 max-width: 160px
+            &-tel
+                margin-top: -6px
         &__tel
             font-weight: 600
             color: #000000
