--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,6 +17,8 @@
 @import 'blocks/warranty'
 /* Импорт стилей блока с материалами */
 @import 'blocks/materials'
+/* Импорт стилей блока с документами */
+@import 'blocks/documents'
 /* Импорт стилей блока с брифом и формой */
 @import 'blocks/brif'
 /* Импорт стилей подвала */
