--- a/src/css/style.css
+++ b/src/css/style.css
@@ -654,8 +654,8 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 .card__text {
-  padding-top: 33px;
-  padding-bottom: 43px;
+  padding-top: 31px;
+  padding-bottom: 44px;
 }
 
 .card__title {
@@ -777,7 +777,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 .steps {
   padding-top: 43px;
-  padding-bottom: 96px;
+  padding-bottom: 94px;
 }
 
 .steps-block {
@@ -797,14 +797,14 @@ h1, h2, h3, h4, p, ul, li, hr {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 49px;
+  margin-bottom: 48px;
 }
 
 .steps-subtitle {
   display: block;
   text-align: center;
   font-size: 20px;
-  margin-bottom: 68px;
+  margin-bottom: 72px;
   font-weight: 100;
 }
 
@@ -957,7 +957,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   .materials-block {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-bottom: 33px;
   }
 }
 
@@ -986,15 +986,111 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 @media (max-width: 567px) {
+  .materials-block {
+    max-width: 270px;
+  }
   .materials__text {
     padding-bottom: 35px;
   }
 }
 
+/* Импорт стилей блока с документами */
+.documents {
+  padding-top: 57px;
+  padding-bottom: 227px;
+}
+
+.documents__title {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 93px;
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 45px;
+  font-weight: 700;
+}
+
+.documents-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.documents__card {
+  max-width: 295px;
+}
+
+.documents__card:first-child {
+  margin-left: -15px;
+}
+
+.documents__card:last-child {
+  margin-right: -15px;
+}
+
+.documents-card__img {
+  text-align: center;
+  max-width: 100%;
+  margin-bottom: 33px;
+}
+
+.documents__name {
+  text-align: center;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+@media (max-width: 1200px) {
+  .documents-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .documents__card {
+    margin-bottom: 33px;
+  }
+}
+
+@media (max-width: 768px) {
+  .documents-card {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 270px;
+  }
+  .documents__card {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .documents__card:first-child {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .documents__card:last-child {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .documents__title {
+    font-size: 18px;
+  }
+  .documents__name {
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 230px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 /* Импорт стилей блока с брифом и формой */
 .brif {
-  padding-top: 100px;
-  padding-bottom: 96px;
+  padding-top: 97px;
+  padding-bottom: 75px;
   background-image: url("../img/brif/brif-color-bg.png"), url("../img/brif/brif-bg.jpg");
   background-position: left center, right center;
   background-size: 50%, contain;
@@ -1029,6 +1125,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   max-width: 370px;
   margin-bottom: 15px;
   height: 65px;
+  padding: 26px;
 }
 
 .brif__button {
@@ -1096,7 +1193,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 .interview-list__item:nth-child(3) {
-  margin-bottom: 1px;
+  margin-bottom: 34px;
 }
 
 .interview-list__text {
@@ -1104,19 +1201,8 @@ h1, h2, h3, h4, p, ul, li, hr {
   font-size: 18px;
 }
 
-.interview-list__text-second {
-  display: inline-block;
-  margin-top: 1px;
-}
-
-.interview-list__text-third {
-  display: inline-block;
-  margin-top: 1px;
-}
-
-.interview-list__text-forth {
-  display: inline-block;
-  margin-top: 1px;
+.interview-list__text_third {
+  margin-top: 9px;
 }
 
 .form-wrap {
@@ -1125,9 +1211,9 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 .form__title {
   font-size: 22px;
-  line-height: 33px;
+  line-height: 31px;
   font-weight: 600;
-  margin-bottom: 41px;
+  margin-bottom: 46px;
 }
 
 .form__subtitle {
@@ -1258,8 +1344,8 @@ h1, h2, h3, h4, p, ul, li, hr {
 .contacts {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
-  padding-top: 100px;
-  padding-left: 210px;
+  padding-top: 93px;
+  padding-left: 215px;
   padding-bottom: 128px;
 }
 
@@ -1281,6 +1367,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 .contacts-list {
   list-style: none;
+  margin-left: -4px;
 }
 
 .contacts-list__icon {
@@ -1299,17 +1386,25 @@ h1, h2, h3, h4, p, ul, li, hr {
       -ms-flex-align: start;
           align-items: flex-start;
   margin-bottom: 39px;
-  line-height: 22px;
+  line-height: 23px;
 }
 
 .contacts-list__item:last-child {
   margin-bottom: 0;
 }
 
+.contacts-list__text {
+  margin-top: -2px;
+}
+
 .contacts-list__text-add {
   font-weight: 600;
   display: block;
   max-width: 160px;
+}
+
+.contacts-list__text-tel {
+  margin-top: -6px;
 }
 
 .contacts-list__tel {
