--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -1,6 +1,6 @@
 .brif
-    padding-top: 100px
-    padding-bottom: 96px
+    padding-top: 97px
+    padding-bottom: 75px
     background-image: url('../img/brif/brif-color-bg.png'), url('../img/brif/brif-bg.jpg')
     background-position: left center, right center
     background-size: 50%, contain
@@ -19,6 +19,7 @@
         max-width: 370px
         margin-bottom: 15px
         height: 65px
+        padding: 26px
     &__button
         margin-top: 15px
         height: 70px
@@ -62,18 +63,20 @@
             &:nth-child(2)
                 margin-bottom: 27px
             &:nth-child(3)
-                margin-bottom: 1px
+                margin-bottom: 34px
         &__text
             max-width: 390px
             font-size: 18px
+            &_third
+                margin-top: 9px
 .form
     &-wrap
         width: 370px
     &__title
         font-size: 22px
-        line-height: 33px
+        line-height: 31px
         font-weight: 600
-        margin-bottom: 41px
+        margin-bottom: 46px
     &__subtitle
         font-size: 16px
         display: block
