--- a/src/sass/blocks/_materials.sass
+++ b/src/sass/blocks/_materials.sass
@@ -34,7 +34,7 @@
         &-block
             margin-left: auto
             margin-right: auto
-            margin-bottom: 20px
+            margin-bottom: 33px
 @media (max-width: 768px)
     .materials
         padding-top: 59px
@@ -54,5 +54,7 @@
                 padding-bottom: 43px
 @media (max-width: 567px)
     .materials
+        &-block
+            max-width: 270px
         &__text
             padding-bottom: 35px
