Сделан Pixel Perfect для всего сайта

--- a/src/sass/blocks/_documents.sass
+++ b/src/sass/blocks/_documents.sass
@@ -37,14 +37,18 @@
             margin-bottom: 33px
 @media (max-width: 768px)
     .documents
-        
+        padding-top: 12px
+        padding-bottom: 45px
         &-card
             margin-left: auto
             margin-right: auto
             max-width: 270px
+            &__img
+                margin-bottom: 27px
         &__card
             margin-left: auto
             margin-right: auto
+            margin-bottom: 43px
             &:first-child
                 margin-left: auto
                 margin-right: auto
@@ -53,6 +57,9 @@
                 margin-left: auto
         &__title
             font-size: 18px
+            line-height: 21px
+            max-width: 270px
+            margin-bottom: 49px
         &__name
             font-size: 14px
             line-height: 16px
