--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -71,6 +71,7 @@
             max-width: 250px
             line-height: 21px
         &-list
+            margin-left: 0
             &__item
                 margin-bottom: 35px
             &__icon
@@ -80,6 +81,8 @@
                 &-add
                     line-height: 23px
                     font-size: 16px
+                &-tel
+                    line-height: 28px
             &__tel
                 font-size: 16px
-                margin-left: 4px
+                margin-left: 0px
