--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -78,6 +78,10 @@
         &-list
             &__item
                 margin-bottom: 20px
+                &:first-child
+                    margin-bottom: 21px
+                &:last-child
+                    margin-bottom: -5px
             &__text
                 max-width: 200px
                 font-size: 12px
