--- a/src/sass/blocks/_materials.sass
+++ b/src/sass/blocks/_materials.sass
@@ -54,7 +54,12 @@
                 padding-bottom: 43px
 @media (max-width: 567px)
     .materials
+        padding-bottom: 25px
         &-block
             max-width: 270px
         &__text
             padding-bottom: 35px
+            &-first
+                padding-right: 50px
+            &-second
+                padding-right: 30px
