--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -75,8 +75,8 @@
             
 @media (max-width: 768px)
     .price
-        padding-top: 44px
-        padding-bottom: 25px
+        padding-top: 50px
+        padding-bottom: 21px
         &__title
             font-size: 18px
             line-height: 22px
@@ -90,8 +90,37 @@
             flex-direction: column
             align-items: center
         &__text
-            padding-top: 28px
-            padding-bottom: 30px
+            padding-top: 25px
+            padding-bottom: 32px
         &__title
             font-size: 14px
             margin-bottom: 13px
+            margin-left: -4px
+            &-room
+                margin-top: 2px
+                margin-right: -2px
+            &-office
+                margin-top: 1px
+                margin-right: -1px
+            &-building
+                margin-top: 1px
+                margin-right: -3px
+            &-kitchen
+                margin-top: 2px
+                margin-right: -5px
+            &-country
+                margin-top: 2px
+                margin-right: -5px
+        &__link
+            &-bath
+                margin-right: 7px
+            &-room
+                margin-right: 5px
+            &-office
+                margin-right: 7px
+            &-building
+                margin-right: 5px
+            &-kitchen
+                margin-right: 3px
+            &-country
+                margin-right: 4px
