--- a/src/sass/blocks/_steps.sass
+++ b/src/sass/blocks/_steps.sass
@@ -52,29 +52,6 @@
             font-size: 20px
             margin-bottom: 72px
             font-weight: 100
-@media (max-width: 768px)
-    .step
-
-        margin-bottom: 30px
-        &::after
-            display: none
-        &__img
-            margin-bottom: 20px
-        &__text
-            font-size: 12px
-            line-height: 16px
-        &s
-            padding-top: 0
-            padding-bottom: 70px
-            &-block
-                flex-direction: column  
-            &-title
-                font-size: 18px
-                line-height: 22px
-                margin-bottom: 24px
-            &-subtitle
-                font-size: 14px
-                margin-bottom: 33px
 @media (max-width: 1200px)
     .step
         margin-bottom: 30px
@@ -86,3 +63,41 @@
             &-block
                 align-items: center
                 justify-content: center
+@media (max-width: 768px)
+    .step
+        margin-bottom: 29px
+        &-woman
+            margin-bottom: 29px
+        &-money
+            margin-bottom: 27px
+        &-document
+            margin-bottom: 28px
+        &::after
+            display: none
+        &__img
+            margin-bottom: 20px
+            &-woman
+                margin-bottom: 20px
+            &-clock
+                margin-bottom: 29px
+            &-money
+                margin-bottom: 28px
+            &-document
+                margin-bottom: 27px
+            &-calendar
+                margin-bottom: 27px
+        &__text
+            font-size: 12px
+            line-height: 16px
+        &s
+            padding-top: 0
+            padding-bottom: 46px
+            &-block
+                flex-direction: column  
+            &-title
+                font-size: 18px
+                line-height: 22px
+                margin-bottom: 24px
+            &-subtitle
+                font-size: 14px
+                margin-bottom: 33px
