--- a/src/css/style.css
+++ b/src/css/style.css
@@ -353,6 +353,12 @@ h1, h2, h3, h4, p, ul, li, hr {
   .hero-list__item {
     margin-bottom: 20px;
   }
+  .hero-list__item:first-child {
+    margin-bottom: 21px;
+  }
+  .hero-list__item:last-child {
+    margin-bottom: -5px;
+  }
   .hero-list__text {
     max-width: 200px;
     font-size: 12px;
@@ -501,10 +507,19 @@ h1, h2, h3, h4, p, ul, li, hr {
     margin-right: 0;
     padding: 23px 23px;
     margin-bottom: 8px;
+    width: 99%;
+  }
+  .offer__input:first-child {
+    margin-right: 0;
+    padding: 23px 22px;
+  }
+  .offer__input:nth-child(2) {
+    padding: 23px 22px;
   }
   .offer__button {
     font-size: 15px;
     margin-bottom: 23px;
+    width: 99%;
   }
   .offer__ref {
     -webkit-box-orient: vertical;
@@ -563,15 +578,15 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 @media (max-width: 768px) {
   .portfolio {
-    padding: 33px 0 64px;
+    padding: 38px 0 60px;
   }
   .portfolio__title {
     font-size: 18px;
-    margin-bottom: 43px;
+    margin-bottom: 40px;
     line-height: 22px;
   }
   .portfolio__slider {
-    margin-bottom: 44px !important;
+    margin-bottom: 45px !important;
   }
   .slider-item__img {
     width: 245px;
@@ -693,8 +708,8 @@ h1, h2, h3, h4, p, ul, li, hr {
 
 @media (max-width: 768px) {
   .price {
-    padding-top: 44px;
-    padding-bottom: 25px;
+    padding-top: 50px;
+    padding-bottom: 21px;
   }
   .price__title {
     font-size: 18px;
@@ -718,12 +733,51 @@ h1, h2, h3, h4, p, ul, li, hr {
             align-items: center;
   }
   .card__text {
-    padding-top: 28px;
-    padding-bottom: 30px;
+    padding-top: 25px;
+    padding-bottom: 32px;
   }
   .card__title {
     font-size: 14px;
     margin-bottom: 13px;
+    margin-left: -4px;
+  }
+  .card__title-room {
+    margin-top: 2px;
+    margin-right: -2px;
+  }
+  .card__title-office {
+    margin-top: 1px;
+    margin-right: -1px;
+  }
+  .card__title-building {
+    margin-top: 1px;
+    margin-right: -3px;
+  }
+  .card__title-kitchen {
+    margin-top: 2px;
+    margin-right: -5px;
+  }
+  .card__title-country {
+    margin-top: 2px;
+    margin-right: -5px;
+  }
+  .card__link-bath {
+    margin-right: 7px;
+  }
+  .card__link-room {
+    margin-right: 5px;
+  }
+  .card__link-office {
+    margin-right: 7px;
+  }
+  .card__link-building {
+    margin-right: 5px;
+  }
+  .card__link-kitchen {
+    margin-right: 3px;
+  }
+  .card__link-country {
+    margin-right: 4px;
   }
 }
 
@@ -808,41 +862,6 @@ h1, h2, h3, h4, p, ul, li, hr {
   font-weight: 100;
 }
 
-@media (max-width: 768px) {
-  .step {
-    margin-bottom: 30px;
-  }
-  .step::after {
-    display: none;
-  }
-  .step__img {
-    margin-bottom: 20px;
-  }
-  .step__text {
-    font-size: 12px;
-    line-height: 16px;
-  }
-  .steps {
-    padding-top: 0;
-    padding-bottom: 70px;
-  }
-  .steps-block {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .steps-title {
-    font-size: 18px;
-    line-height: 22px;
-    margin-bottom: 24px;
-  }
-  .steps-subtitle {
-    font-size: 14px;
-    margin-bottom: 33px;
-  }
-}
-
 @media (max-width: 1200px) {
   .step {
     margin-bottom: 30px;
@@ -861,6 +880,65 @@ h1, h2, h3, h4, p, ul, li, hr {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .step {
+    margin-bottom: 29px;
+  }
+  .step-woman {
+    margin-bottom: 29px;
+  }
+  .step-money {
+    margin-bottom: 27px;
+  }
+  .step-document {
+    margin-bottom: 28px;
+  }
+  .step::after {
+    display: none;
+  }
+  .step__img {
+    margin-bottom: 20px;
+  }
+  .step__img-woman {
+    margin-bottom: 20px;
+  }
+  .step__img-clock {
+    margin-bottom: 29px;
+  }
+  .step__img-money {
+    margin-bottom: 28px;
+  }
+  .step__img-document {
+    margin-bottom: 27px;
+  }
+  .step__img-calendar {
+    margin-bottom: 27px;
+  }
+  .step__text {
+    font-size: 12px;
+    line-height: 16px;
+  }
+  .steps {
+    padding-top: 0;
+    padding-bottom: 46px;
+  }
+  .steps-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .steps-title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 24px;
+  }
+  .steps-subtitle {
+    font-size: 14px;
+    margin-bottom: 33px;
   }
 }
 
@@ -986,11 +1064,20 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 @media (max-width: 567px) {
+  .materials {
+    padding-bottom: 25px;
+  }
   .materials-block {
     max-width: 270px;
   }
   .materials__text {
     padding-bottom: 35px;
+  }
+  .materials__text-first {
+    padding-right: 50px;
+  }
+  .materials__text-second {
+    padding-right: 30px;
   }
 }
 
@@ -1058,14 +1145,22 @@ h1, h2, h3, h4, p, ul, li, hr {
 }
 
 @media (max-width: 768px) {
+  .documents {
+    padding-top: 12px;
+    padding-bottom: 45px;
+  }
   .documents-card {
     margin-left: auto;
     margin-right: auto;
     max-width: 270px;
   }
+  .documents-card__img {
+    margin-bottom: 27px;
+  }
   .documents__card {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 43px;
   }
   .documents__card:first-child {
     margin-left: auto;
@@ -1077,6 +1172,9 @@ h1, h2, h3, h4, p, ul, li, hr {
   }
   .documents__title {
     font-size: 18px;
+    line-height: 21px;
+    max-width: 270px;
+    margin-bottom: 49px;
   }
   .documents__name {
     font-size: 14px;
@@ -1280,10 +1378,14 @@ h1, h2, h3, h4, p, ul, li, hr {
   .brif__button {
     margin-top: 0;
     font-size: 14px;
+    width: 98%;
+    margin-bottom: 28px;
   }
   .brif__input {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     font-size: 15px;
+    width: 98%;
+    padding-left: 20px;
   }
   .interview {
     padding-right: 0px;
@@ -1293,38 +1395,62 @@ h1, h2, h3, h4, p, ul, li, hr {
     max-width: 230px;
     font-size: 18px;
     line-height: 21px;
+    margin-left: 2px;
   }
   .interview__subtitle {
     font-size: 14px;
     max-width: 190px;
     margin-bottom: 39px;
+    margin-left: 4px;
   }
   .interview-list__text {
+    display: inline-block;
     max-width: 235px;
   }
+  .interview-list__text_first {
+    margin-left: -3px;
+  }
+  .interview-list__text_second {
+    margin-left: -3px;
+    margin-top: 8px;
+  }
   .interview-list__text_third {
-    max-width: 200px;
+    max-width: 190px;
+    margin-top: 10px;
+    margin-left: -3px;
+  }
+  .interview-list__text_forth {
+    margin-left: -3px;
   }
   .interview-list__item:last-child {
     margin-bottom: 0;
   }
+  .interview-list__item:nth-child(2) {
+    margin-bottom: 15px;
+  }
+  .interview-list__item:nth-child(3) {
+    margin-bottom: 19px;
+  }
   .interview-list__counter {
     margin-right: 10px;
+    display: inline-block;
   }
   .form__title {
+    margin-top: 4px;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 27px;
+    margin-bottom: 22px;
   }
   .form__subtitle {
     font-size: 14px;
+    margin-bottom: 34px;
   }
   .form__description {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 67px;
     font-size: 14px;
     max-width: 140px;
-    line-height: 20px;
+    line-height: 22px;
   }
 }
 
@@ -1449,6 +1575,9 @@ h1, h2, h3, h4, p, ul, li, hr {
     max-width: 250px;
     line-height: 21px;
   }
+  .contacts-list {
+    margin-left: 0;
+  }
   .contacts-list__item {
     margin-bottom: 35px;
   }
@@ -1462,9 +1591,12 @@ h1, h2, h3, h4, p, ul, li, hr {
     line-height: 23px;
     font-size: 16px;
   }
+  .contacts-list__text-tel {
+    line-height: 28px;
+  }
   .contacts-list__tel {
     font-size: 16px;
-    margin-left: 4px;
+    margin-left: 0px;
   }
 }
 
