--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -122,9 +122,13 @@
         &__button
             margin-top: 0
             font-size: 14px
+            width: 98%
+            margin-bottom: 28px
         &__input
-            margin-bottom: 10px
+            margin-bottom: 8px
             font-size: 15px
+            width: 98%
+            padding-left: 20px
     .interview
         padding-right: 0px
         &__title
@@ -132,30 +136,49 @@
             max-width: 230px
             font-size: 18px
             line-height: 21px
+            margin-left: 2px
         &__subtitle
             font-size: 14px
             max-width: 190px
             margin-bottom: 39px
+            margin-left: 4px
         &-list
             &__text
+                display: inline-block
                 max-width: 235px
+                &_first
+                    margin-left: -3px
+                &_second
+                    margin-left: -3px
+                    margin-top: 8px
                 &_third
-                    max-width: 200px
+                    max-width: 190px
+                    margin-top: 10px
+                    margin-left: -3px
+                &_forth
+                    margin-left: -3px
             &__item
                 &:last-child
                     margin-bottom: 0
+                &:nth-child(2)
+                    margin-bottom: 15px
+                &:nth-child(3)
+                    margin-bottom: 19px
             &__counter
                 margin-right: 10px
+                display: inline-block
     .form
         &__title
+            margin-top: 4px
             font-size: 18px
-            line-height: 32px
+            line-height: 27px
+            margin-bottom: 22px
         &__subtitle
             font-size: 14px
+            margin-bottom: 34px
         &__description
             display: block
-            margin-left: auto
-            margin-right: auto
+            margin-left: 67px
             font-size: 14px
             max-width: 140px
-            line-height: 20px
+            line-height: 22px
