--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -91,9 +91,16 @@
             margin-right: 0
             padding: 23px 23px 
             margin-bottom: 8px
+            width: 99%
+            &:first-child
+                margin-right: 0
+                padding: 23px 22px
+            &:nth-child(2)
+                padding: 23px 22px
         &__button
             font-size: 15px
             margin-bottom: 23px
+            width: 99%
         &__ref
             flex-direction: column
             margin-left: 5px
