--- a/src/sass/blocks/_offer.sass
+++ b/src/sass/blocks/_offer.sass
@@ -16,7 +16,7 @@
         padding-right: 90px
     &__title
         font-size: 24px
-        font-weight: 600
+        font-weight: 700
         line-height: 35px
         max-width: 360px
         margin-bottom: 20px
@@ -27,13 +27,25 @@
         max-width: 270px
         margin-bottom: 31px
     &__input
-        width: 240px
         margin-bottom: 30px
+        width: 240px
+
         &:first-child
-            margin-right: 11px
             padding: 23px 25px
         &:nth-child(2)
             padding: 23px 31px
+        &-wrap
+            display: inline-block
+            position: relative
+            max-width: 240px
+            min-height: 65px
+            &:first-child
+                margin-right: 11px
+            label
+                display: inline-block
+                position: absolute
+                top: 81%
+                color: red
     &__ref
         display: flex
         justify-content: space-between
@@ -47,7 +59,7 @@
             margin-right: -26px
             margin-top: -2px
     &__phone
-        font-weight: 600
+        font-weight: 700
         text-decoration: none
         color: #000
         display: block
@@ -57,22 +69,39 @@
         width: 100%
         min-height: 70px
         font-size: 16px
-        font-weight: 600
+        font-weight: 700
         margin-bottom: 16px
 @media (max-width: 1200px)
     .offer
+        &__input
+            width: 290px
+            &-wrap
+                width: 290px
+@media (max-width: 991px)
+    .offer
         background: #ffffff
+        &-form
+            width: 100%
         &-block
             width: 100%
             padding-right: 0
         &__input
-            width: 49%
+            width: 100%
+            &-wrap
+                width: 100%
+                display: inline-block
+                min-height: 65px
+        &__button
+            max-width: 495px
         &__ref
             justify-content: space-around
+            max-width: 495px
 @media (max-width: 768px)
     .offer
         background: #ffffff
         padding: 53px 0
+        &__form
+            width: 100%
         &__title
             margin-top: -5px
             font-size: 18px
@@ -92,15 +121,20 @@
             padding: 23px 23px 
             margin-bottom: 8px
             width: 99%
+            &-wrap
+                width: 100%
+                display: inline-block
             &:first-child
                 margin-right: 0
                 padding: 23px 22px
             &:nth-child(2)
                 padding: 23px 22px
+            &-wrap
+                max-width: 100%
         &__button
             font-size: 15px
             margin-bottom: 23px
-            width: 99%
+            max-width: 100%
         &__ref
             flex-direction: column
             margin-left: 5px
