--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -5,6 +5,8 @@
     background-position: left center, right center
     background-size: 50%, contain
     background-repeat: repeat-y, no-repeat
+    &-container
+        width: 1170px
     &-block
         display: flex
     &__interview
@@ -26,14 +28,18 @@
         width: 100%
         max-width: 370px
         font-size: 16px
-        font-weight: 600
+        font-weight: 700
         margin-bottom: 30px
+label
+    color: red
+    &:nth-child(1)
+        margin-bottom: 10px
 .interview
     padding-right: 65px
     &__title
         font-size: 22px
         line-height: 33px
-        font-weight: 600
+        font-weight: 700
         margin-bottom: 44px
     &__subtitle
         font-size: 16px
@@ -56,7 +62,7 @@
         &__item
             display: flex
             align-items: center
-            font-weight: 600
+            font-weight: 700
             margin-bottom: 25px
             &:first-child
                 margin-bottom: 25px
@@ -75,7 +81,7 @@
     &__title
         font-size: 22px
         line-height: 31px
-        font-weight: 600
+        font-weight: 700
         margin-bottom: 46px
     &__subtitle
         font-size: 16px
@@ -86,9 +92,13 @@
         font-size: 15px
 @media (max-width: 1200px)
     .brif
+        &-container
+            width: 760px
         &__form
-            justify-content: center
+            justify-content: flex-end
     .form
+        &-wrap
+            padding-left: 40px
         &__title
             margin-bottom: 15px
             font-size: 20px
@@ -115,6 +125,9 @@
         background-position: center top, center bottom
         background-repeat: repeat-x, no-repeat
         background-size: 100% 50%, cover
+        &-container
+            max-width: 580px
+            width: 90%
         &-block
             flex-direction: column
         &__form
@@ -131,9 +144,14 @@
             padding-left: 20px
     .interview
         padding-right: 0px
+        padding-left: 3px
+        margin-right: auto
+        margin-left: auto
+
         &__title
+            padding-right: 20px
             margin-top: -5px
-            max-width: 230px
+            max-width: 330px
             font-size: 18px
             line-height: 21px
             margin-left: 2px
@@ -143,6 +161,7 @@
             margin-bottom: 39px
             margin-left: 4px
         &-list
+            padding-right: 0px
             &__text
                 display: inline-block
                 max-width: 235px
@@ -168,6 +187,10 @@
                 margin-right: 10px
                 display: inline-block
     .form
+        &-wrap
+            margin-left: auto
+            margin-right: auto
+            padding-left: 0
         &__title
             margin-top: 4px
             font-size: 18px
