--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -24,6 +24,7 @@
             background: transparent
             border: none
             z-index: 10
+            cursor: pointer
         &__offers
             display: none
             width: 600px
@@ -55,6 +56,7 @@
                     margin-bottom: 15px
                 &-container
                     margin-top: 30px
+                    width: 100%
             &__button
                 width: 100%
                 font-weight: 600
@@ -107,6 +109,13 @@
                 font-size: 14px
                 font-weight: 600
                 margin-bottom: 15px
+#modal
+    &name
+        &-error
+            text-align: center
+    &phone
+        &-error
+            text-align: center
 @media (max-width: 567px)
     .modal
         &-dialog
