--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -16,7 +16,7 @@
         text-align: center
         margin-bottom: 59px
         font-size: 20px
-        font-weight: 100
+        font-weight: 300
     &__card
         margin-bottom: 30px
 .card
@@ -52,7 +52,7 @@
         font-size: 18px
     &__link
         display: inline-block
-        font-weight: 600
+        font-weight: 700
         color: #000
         text-decoration: none
         font-size: 16px
@@ -84,11 +84,16 @@
         &__subtitle
             font-size: 14px
             margin-bottom: 62px
+            padding-right: 19px
     .card
         max-width: 270px
+        &:hover
+            box-shadow: none
         &s
             flex-direction: column
             align-items: center
+            &:hover
+                
         &__text
             padding-top: 25px
             padding-bottom: 32px
@@ -124,3 +129,5 @@
                 margin-right: 3px
             &-country
                 margin-right: 4px
+            &:after
+                height: 3px
