--- a/src/sass/blocks/_steps.sass
+++ b/src/sass/blocks/_steps.sass
@@ -41,17 +41,16 @@
         &-title
             font-size: 30px
             line-height: 45px
-            max-width: 660px
+            max-width: 675px
             text-align: center
-            margin-left: auto
-            margin-right: auto
+            margin-left: 251px
             margin-bottom: 48px
         &-subtitle
             display: block
             text-align: center
             font-size: 20px
             margin-bottom: 72px
-            font-weight: 100
+            font-weight: 300
 @media (max-width: 1200px)
     .step
         margin-bottom: 30px
@@ -63,6 +62,9 @@
             &-block
                 align-items: center
                 justify-content: center
+            &-title
+                margin-left: auto
+                margin-right: auto
 @media (max-width: 768px)
     .step
         margin-bottom: 29px
