--- a/src/sass/blocks/_warranty.sass
+++ b/src/sass/blocks/_warranty.sass
@@ -16,6 +16,8 @@
             margin-left: auto
             margin-right: auto
         &__text
-            width: 85%
+            width: 100%
             font-size: 18px
             line-height: 22px
+            margin-left: auto
+            margin-right: auto
